Fix middle click double pasting in vim
Add conditional check so that tmux does not paste if the pane is running
vim as vim already handles mouse middle click pasting.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -178,7 +178,7 @@ bind-key -T copy-mode-vi Escape send-keys -X cancel
 # middle click exit copy mode and paste, in normal mode paste
 unbind-key -T root MouseUp2Pane
 unbind-key -T copy-mode-vi MouseUp2Pane
-bind-key -T root MouseUp2Pane paste-buffer
+bind-key -T root MouseUp2Pane if-shell "$is_vim" '' 'paste-buffer'
 bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
 
 # word delimiters, second option is neccessary to append a ', default is ` -_@'.
