Add tmux popup window binding and helper script
This requires tmux 3.2. Currently brew is on 3.1b so you will need to
pull the latest and compile manually.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -76,6 +76,9 @@ bind-key v select-layout even-vertical
 # create new session
 bind-key C new-session
 
+# toggle popup window
+bind-key P run-shell 'popuptmux'
+
 ################################################################################
 #                                                                              #
 #  VIM-TMUX-NAVIGATOR SUPPORT                                                  #
