Add binding for jumping to last session

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -73,8 +73,9 @@ unbind-key v
 bind-key h select-layout even-horizontal
 bind-key v select-layout even-vertical
 
-# create new session
+# sessions
 bind-key C new-session
+bind-key L switch-client -l
 
 # toggle popup window
 bind-key P run-shell 'popuptmux'
