Correct submodule path, markdown preview install

--- a/.gitmodules
+++ b/.gitmodules
@@ -168,6 +168,6 @@
 [submodule "dotfiles/vim/pack/bundle/opt/markdown-preview.nvim"]
 	path = dotfiles/vim/pack/bundle/opt/markdown-preview.nvim
 	url = https://github.com/iamcco/markdown-preview.nvim.git
-[submodule "dotfiles/vim/pack/bundle/opt/SimplylFold.git"]
-	path = dotfiles/vim/pack/bundle/opt/SimplylFold.git
+[submodule "dotfiles/vim/pack/bundle/opt/SimplylFold"]
+	path = dotfiles/vim/pack/bundle/opt/SimplylFold
 	url = https://github.com/tmhedberg/SimpylFold.git
