--- a/.config.example
+++ b/.config.example
@@ -32,6 +32,7 @@ Email      = cody@codybuell.com           # preferred email
 OSUsername = pbuell                       # your system username
 IRCNick    = pbuell,Cody                  # your irc nicknames, comma separated
 OSHomeRoot = /Users/                      # /Users/ on osx /home/ on linux
+Team       = UserA,UserB,UserC            # irc names of team members for alias
 
 
 ################################################################################
