Tweak note for linux

--- a/dotfiles/gnupg/gpg-agent.conf
+++ b/dotfiles/gnupg/gpg-agent.conf
@@ -1,6 +1,4 @@
-# linux
-#pinentry-program /usr/bin/pinentry
-# osx
+# linux: pinentry-program /usr/bin/pinentry
 pinentry-program /usr/local/bin/pinentry
 pinentry-timeout 60
 
