Update config for tmux 3.2, fixes popup mouse map
There was an issue with 3.2-rc2 where the mouse would be off by row and
column, tmux 3.2 addresses this but has some updated usage as is
standard for EVERY release of tmux...

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,4 +1,4 @@
-# tmux version 3.1b
+# tmux version 3.2
 
 ################################################################################
 #                                                                              #
@@ -78,7 +78,9 @@ bind-key C new-session
 bind-key L switch-client -l
 
 # toggle popup window
-bind-key P run-shell 'popuptmux'
+#bind-key P run-shell 'popuptmux'
+bind-key P if-shell -F '#{==:#{session_name},popup}' { detach-client } \
+    { popup -w85% -h85% -E 'tmux attach -t popup || tmux new -s popup' }
 
 ################################################################################
 #                                                                              #
