Use home session as popup in tmux

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -79,8 +79,8 @@ bind-key L switch-client -l
 
 # toggle popup window
 #bind-key P run-shell 'popuptmux'
-bind-key P if-shell -F '#{==:#{session_name},popup}' { detach-client } \
-    { popup -w85% -h85% -E 'tmux attach -t popup || tmux new -s popup' }
+bind-key P if-shell -F '#{==:#{session_name},HOME}' { detach-client } \
+    { popup -w85% -h85% -E 'tmux attach -t HOME || tmux new -s HOME' }
 
 ################################################################################
 #                                                                              #
