--- a/dotfiles/gnupg/gpg-agent.conf
+++ b/dotfiles/gnupg/gpg-agent.conf
@@ -1,4 +1,5 @@
 # linux: pinentry-program /usr/bin/pinentry
+# m1: pinentry-program /opt/homebrew/bin/pinentry
 pinentry-program /usr/local/bin/pinentry
 pinentry-timeout 60
 
