Reduce display-panes-time in tmux down to 300ms

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -39,6 +39,9 @@ set -g history-limit 50000
 # don't wrap searches
 set-option -w -g wrap-search off
 
+# only show pane numbers for 300 milliseconds
+set -g display-panes-time 300
+
 ################################################################################
 #                                                                              #
 # BINDINGS                                                                     #
