Pull in todo-comments plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -204,3 +204,9 @@
 [submodule "dotfiles/vim/pack/bundle/opt/vim-schlepp"]
 	path = dotfiles/vim/pack/bundle/opt/vim-schlepp
 	url = https://github.com/zirrostig/vim-schlepp.git
+[submodule "dotfiles/vim/pack/bundle/opt/todo-comments.nvim"]
+	path = dotfiles/vim/pack/bundle/opt/todo-comments.nvim
+	url = https://github.com/folke/todo-comments.nvim.git
+[submodule "dotfiles/vim/pack/bundle/opt/plenary.nvim"]
+	path = dotfiles/vim/pack/bundle/opt/plenary.nvim
+	url = https://github.com/nvim-lua/plenary.nvim.git
