Improvements for tmux popup and note taking

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -85,6 +85,12 @@ bind-key L switch-client -l
 bind-key P if-shell -F '#{==:#{session_name},HOME}' { detach-client } \
     { popup -w85% -h85% -E 'tmux attach -t HOME || tmux new -s HOME' }
 
+bind-key N if-shell -F '#{==:#{session_name},HOME}' { \
+    if-shell -F '#{==:#{window_name},notes}' { detach-client } \
+      { select-window -t:notes } \
+    } \
+    { popup -w85% -h85% -E 'tmux attach -t HOME:notes || tmux new -s HOME' }
+
 ################################################################################
 #                                                                              #
 #  VIM-TMUX-NAVIGATOR SUPPORT                                                  #
