Add support for Kitty, Alacritty, rem note popup

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -89,7 +89,7 @@ bind-key P if-shell -F '#{==:#{session_name},HOME}' { detach-client } \
 #     if-shell -F '#{==:#{window_name},notes}' { detach-client } \
 #       { select-window -t:notes } \
 #     } \
-#     { popup -w85% -h85% -E 'tmux attach -t HOME:1:2 || tmux new -s HOME' }
+#     { popup -w85% -h85% -E 'tmux attach -t HOME:notes || tmux new -s HOME' }
 
 ################################################################################
 #                                                                              #
@@ -123,8 +123,8 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 ################################################################################
 
 # set custom 256 color terminal with italics
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "xterm-kitty"
+set -ga terminal-overrides ',xterm-256color:Tc,alacritty:RGB,xterm-kitty:RGB'
 
 # theming
 set -w -g window-status-current-style fg=colour1
