Add binding for clearing all panes

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -91,6 +91,16 @@ bind-key P if-shell -F '#{==:#{session_name},HOME}' { detach-client } \
 #     } \
 #     { popup -w85% -h85% -E 'tmux attach -t HOME:notes || tmux new -s HOME' }
 
+# clear panes
+unbind-key y
+bind-key y set-window-option synchronize-panes on\; send-keys clear\r\; set-window-option synchronize-panes off
+
+# reload config file with ctrl-b r
+bind-key r source-file ~/.tmux.conf
+
+# toggle synchronize panes
+bind-key S set-window-option synchronize-panes
+
 ################################################################################
 #                                                                              #
 #  VIM-TMUX-NAVIGATOR SUPPORT                                                  #
@@ -216,12 +226,6 @@ set -g pane-base-index 1
 
 # dynamically update iTerm tab and window titles
  set -g set-titles on
-
-# reload config file with ctrl-b r
-bind-key r source-file ~/.tmux.conf
-
-# toggle synchronize panes
-bind-key S set-window-option synchronize-panes
 
 # define the window title format
 set -g set-titles-string "#T : #h > #S > #W"
