Add HOMEBREW_PREFIX to support arm and intel arch

--- a/.config.example
+++ b/.config.example
@@ -282,7 +282,7 @@ PATH07 = /Users/pbuell/Sources                  # third party repos (go get...)
 SYMLINK00 = /Volumes/GoogleDrive/My Drive/:Google Drive
 SYMLINK01 = /Volumes/GoogleDrive/My Drive/Tasks:.todo/tasks
 SYMLINK02 = /Users/pbuell/.vim:/Users/pbuell/.config/nvim
-SYMLINK03 = /usr/local/bin/neomutt:/usr/local/bin/mutt
+SYMLINK03 = {{ HOMEBREW_PREFIX }}/bin/neomutt:{{ HOMEBREW_PREFIX }}/bin/mutt
 SYMLINK04 = /Users/pbuell/Bin:/Users/pbuell/.go/bin
 SYMLINK05 = /Users/pbuell/Sources:/Users/pbuell/.go/src
 SYMLINK06 = /Users/pbuell/Repos/mit/mit:/Users/pbuell/.todo/addons/mit
