--- a/dotfiles/gnupg/gpg-agent.conf
+++ b/dotfiles/gnupg/gpg-agent.conf
@@ -1,6 +1,4 @@
-# linux: pinentry-program /usr/bin/pinentry
-# m1: pinentry-program /opt/homebrew/bin/pinentry
-pinentry-program /usr/local/bin/pinentry
+pinentry-program {{ HOMEBREW_PREFIX }}/bin/pinentry
 pinentry-timeout 60
 
 enable-ssh-support
