Use gui for pinetry to support vim-fugitive

--- a/dotfiles/gnupg/gpg-agent.conf
+++ b/dotfiles/gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
-pinentry-program {{ HOMEBREW_PREFIX }}/bin/pinentry
+pinentry-program {{ HOMEBREW_PREFIX }}/bin/pinentry-mac
 pinentry-timeout 60
 
 enable-ssh-support
