--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -262,3 +262,12 @@ set-option -g status-left ' #S   ⧉ #I/#{session_windows} ⊞ #P/#{window_panes
 set-option -g status-right-length 100
 # if you are running a version of osx prior to sierra you will need to change $3 to $2 in the awk below
 set-option -g status-right " #([ `pmset -g batt | grep -c 'InternalBattery'` -gt 0 ] && pmset -g batt | awk 'NR==2 {gsub(/;/,\"\");print \"   \"$3}')   [#{pane_width}x#{pane_height}]  %H:%M #(date -u '+%%H:%%M %%d-%%b-%%y') "
+
+################################################################################
+##                                                                            ##
+##  PLUGINS                                                                   ##
+##                                                                            ##
+################################################################################
+
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux/tmux-continuum/continuum.tmux
